apps/api/tests/test-data/bad/ruby/HardcodedSecretRuby.rb
# Bad: Hardcoded secrets

# ruby-security-001: hardcoded credentials
API_KEY = "sk_live_123456"
PASSWORD = "admin123"
DATABASE_URL = "postgresql://user:pass@localhost/db"
